# WhatsappAnalyzer

./: .gitignore  .gitlab-ci.yml  Procfile  Readme.md  db.sqlite3  manage.py  noxfile.py  pyproject.toml  pytest.ini  requirements.txt
WhatsappAnalyzer/: asgi.py  db.sqlite3  settings.py  test_settings.py  urls.py  wsgi.py
WhatsappAnalyzer/settings/: base.py  production.py
data/: ChatMena.txt  ChatVIRUS.txt
notebooks/: ExpectedMessages.mlx  Untitled.m  prob_convergence.m  prob_convergence2.m
src/: chat_network.py  network.py  network_drawing.py  whatsapp.py
static/css/: general_style.css
static/sass/: general_style.scss
tests/: test_chat_network.py  test_chat_to_network_converter.py  test_network_plot.py  test_upload_chat.py  test_web.py  test_whatsapp_reader.py
tests/helpers/: ChatExample.txt  ChatExampleContiguousMessages.txt  ChatExampleERROR.txt  ChatExampleFourDigitYear.txt  ChatExampleLocation.txt  ChatExampleOneDigitHour.txt  ChatExampleSplitLines.txt  ChatExampleSplitLinesWithBar.txt
web_analyzer/: apps.py  dash_apps.py  forms.py  urls.py  views.py
web_analyzer/templates/: base.html  chat_statistics.html  upload_chat.html
