[tool.poetry]
name = "whatsappanalyzer"
version = "0.1.0"
description = ""
authors = ["Rubén <chanantero@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"
nox = "^2020.8.22"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
