[tool.poetry]
name = "whatsappanalyzer"
version = "0.1.0"
description = ""
authors = ["Rubén <chanantero@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.1.2"
networkx = "^2.5"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"
nox = "^2020.8.22"
flake8 = "^3.8.4"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.1"
flake8-bugbear = "^20.1.4"
flake8-import-order = "^0.18.1"
safety = "^1.9.0"
pytest-cov = "^2.10.1"
jupyterlab = "^2.2.8"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
fail_under = 100
