[tool.poetry]
name = "whatsappanalyzer"
version = "0.1.0"
description = ""
authors = ["Rubén <chanantero@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.1.2"
networkx = "^2.5"
chart-studio = "^1.1.0"
plotly = "^4.11.0"
scipy = "^1.5.2"
django = "^3.1.2"
django-sass = "^1.0.0"
djangorestframework = "^3.12.1"
matplotlib = "^3.3.2"
django-plotly-dash = "^1.4.2"
channels = "^2.4.0"
daphne = "^2.5.0"
redis = "^3.5.3"
django-redis = "^4.12.1"
channels-redis = "^3.1.0"
# For Heroku deployment
dj-database-url = "^0.5.0"
gunicorn = "^20.0.4"
whitenoise = "^5.2.0"
psycopg2 = "^2.8.6"
django-heroku = "^0.3.1"
django-session-cleanup = "^3.0.0"
celery = "^5.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"
pytest-django = "^4.0.0"
nox = "^2020.8.22"
flake8 = "^3.8.4"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.1"
flake8-bugbear = "^20.1.4"
flake8-import-order = "^0.18.1"
safety = "^1.9.0"
pytest-cov = "^2.10.1"
jupyterlab = "^2.2.8"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
fail_under = 100
